# zonewapp

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-windows.yml  build.yml
android/: build.gradle
android/app/: build.gradle
lib/: app.dart  main.dart
lib/models/: account.dart  account.g.dart  project_item.dart  settings.dart  settings.g.dart  task_template.dart  task_template.g.dart
lib/providers/: account_provider.dart  automation_provider.dart  settings_provider.dart
lib/screens/account/: account_screen.dart  add_account_screen.dart
lib/screens/home/: home_screen.dart
lib/screens/settings/: about_screen.dart  ai_mode_screen.dart  backup_restore_screen.dart  content_settings_screen.dart  debug_screen.dart  help_screen.dart  settings_screen.dart  template_editor_screen.dart  template_list_screen.dart  webview_login_screen.dart  zongping_browser_screen.dart
lib/services/: ai_form_filler_service.dart  ai_service.dart  automation_service.dart  form_scraper_service.dart  notification_service.dart  storage_service.dart  terminal_service.dart  web_automation_service.dart  web_server_service.dart  webai2api_service.dart  webview_ai_service.dart
lib/theme/: app_theme.dart
lib/utils/: constants.dart  crypto_utils.dart
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/ai/: mod.rs
rust/src/automation/: mod.rs
rust/src/bridge/: mod.rs
rust/src/storage/: mod.rs
rust/src/web_server/: mod.rs
windows/: CMakeLists.txt
windows/runner/: main.cpp
(+6 files in other folders)
