[package]
name = "zonewapp"
version = "1.0.0"
edition = "2021"
description = "ZonewApp Rust Backend - AI & Automation Engine"

[lib]
name = "zonewapp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data Storage
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

# Web Server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Flutter Rust Bridge
flutter_rust_bridge = "=2.1.0"

# Error Handling
anyhow = "1"
thiserror = "1"

# HTML Parsing
scraper = "0.19"

# Regex
regex = "1"

[build-dependencies]
flutter_rust_bridge_codegen = "2.1.0"
